@@ -467,6 +467,7 @@ void print_help(void) {
 "                            chooses the right value: 10s for a >=6.5.x server\n"
 "                            and 0s for a <6.5.x server, which means no\n"
 "                            keepalive.\n"
+"-T, --threshold_override    Ignore server autostart_threshold for ogg and mp3.\n"
 #ifdef __WIN32__
 "-H, --highpriority          Change process priority class to high.\n"
 #ifdef PADEV_WASAPI
